tests/fails/f47.t
if not require("fail") then return end

terra foo()
  goto a
end
foo()
